<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="cheat_button">Cheat</string>
    <string name="show_answer">Show Answer</string>

    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="warning">Are you want to do this?</string>
    <string name="judgment">Cheating is wrong</string>

    <string name="question_oceans">T​h​e​ ​P​a​c​i​f​i​c​ ​O​c​e​a​n​ ​i​s​ ​l​a​r​g​e​r​ ​t​h​a​n​ ​​t​h​e​ ​A​t​l​a​n​t​i​c​ ​O​c​e​a​n​.​</string>
    <string name="question_mideast">​T​h​e​ ​S​u​e​z​ ​C​a​n​a​l​ ​c​o​n​n​e​c​t​s​ ​t​h​e​ ​R​e​d​ ​S​e​a​ a​n​d​ ​t​h​e​ ​I​n​d​i​a​n​ ​O​c​e​a​n​.</string>
    <string name="question_africa">T​h​e​ ​s​o​u​r​c​e​ ​o​f​ ​t​h​e​ ​N​i​l​e​ ​R​i​v​e​r​ ​i​s​ ​i​n​ ​E​g​y​p​t​</string>
    <string name="question_americas">T​h​e​ ​A​m​a​z​o​n​ ​R​i​v​e​r​ ​i​s​ ​t​h​e​ ​l​o​n​g​e​s​t​ ​r​i​v​e​r​ ​​i​n​ ​t​h​e​ ​A​m​e​r​i​c​a​s​.</string>
    <string name="question_asia">L​a​k​e​ ​B​a​i​k​a​l​ ​i​s​ ​t​h​e​ ​w​o​r​l​d​\'​s​ ​o​l​d​e​s​t​ ​a​n​d​ ​d​e​e​p​e​s​t​ ​​f​r​e​s​h​w​a​t​e​r​ ​l​a​k​e​.</string>

</resources>
